src/test/ui/proc-macro/shadow-builtin.stderr
error: cannot override a built-in #[derive] mode
  --> $DIR/shadow-builtin.rs:10:21
   |
LL | #[proc_macro_derive(PartialEq)]
   |                     ^^^^^^^^^

error: aborting due to previous error

